# kyutai-mcp

./: .gitignore  CHANGELOG_20260419_030932.md.bak  CHANGELOG_20260419_031201.md.bak  INSTALL.md  README.md  README_20260419_030841.md.bak  README_20260419_030850.md.bak  glama.json  justfile  llms-full.txt  llms.txt  pyproject.toml  pyproject_20260419_030834.toml.bak  start.ps1
docs/: GLOM.md  MCP.md  MOSHI_SERVICE.md  README.md  TOOLBENCH_INTENT.md  VOICE_WORKFLOWS.md  WEBAPP.md
src/kyutai_mcp/: __main__.py  config.py  server.py
src/kyutai_mcp/proxy/: __init__.py  moshi_proxy.py  persona.py
src/kyutai_mcp/tools/: hw.py  moshi.py  voice_pipeline_20260419_031128.py.bak  voice_pipeline_20260419_031146.py.bak
tools/: set_moshi_config.py  smoke_import.py
webapp/: start.bat  start.ps1
webapp/backend/: README.md  app.py  app_20260419_030828.py.bak  app_20260419_031137.py.bak  app_20260419_031150.py.bak  moshi-service-config.json
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: main.tsx  styles.css
webapp/frontend/src/lib/: dashboardSettings.ts
webapp/frontend/src/ui/: App.tsx  cn.ts
webapp/frontend/src/ui/components/: ModelSelect.tsx
webapp/frontend/src/ui/log/: LogContext.tsx
webapp/frontend/src/ui/pages/: ActionsPage.tsx  AppsPage.tsx  ChatPage.tsx  HelpPage.tsx  HomePage.tsx  LoggerPage.tsx  MoshiTalkPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  StatusPage.tsx  ToolsPage.tsx  VoicePipelinePage.tsx
webapp/frontend/src/ui/shell/: AppShell.tsx  ChatModal.tsx  LoggerPanel.tsx
