[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "kyutai-mcp"
version = "0.2.0"
description = "FastMCP 3.1 server + SOTA webapp for Kyutai Moshi research and ops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.1.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "nvidia-ml-py>=12.560.30; platform_system == 'Windows' or platform_system == 'Linux'",
  "aiohttp>=3.13.3",
]

[project.scripts]
kyutai-mcp = "kyutai_mcp.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kyutai_mcp"]

tool.ruff.format]
quote-style = "double"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Hardened v13.1 Rule Set
select = [
    "E", "F", "I", "UP", "B", "S", "A", "ANN", "COM", "C4", "DTZ", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments
    "S101",   # Use of assert (standard for pytest)
    "TRY003", # Avoid specifying long messages in exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
