[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "kyutai-mcp"
version = "0.2.0"
description = "FastMCP 3.1 server + SOTA webapp for Kyutai Moshi research and ops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.1.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "nvidia-ml-py>=12.560.30; platform_system == 'Windows' or platform_system == 'Linux'",
  "aiohttp>=3.13.3",
]

[project.scripts]
kyutai-mcp = "kyutai_mcp.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "ty>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kyutai_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLO", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "D100", "D104", "S101", "G004", "PLR0913", "TRY003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
